[package]
name = "rustinn"
version = "0.1.0"
authors = ["David Palm <dvdplm@gmail.com>"]

[lib]
name = "tinn"
path = "src/lib.rs"

[[bin]]
name = "rustinn"
path = "src/main.rs"

[[bin]]
name = "viz"
path = "src/viz.rs"

[dependencies]
failure = "*"
failure_derive = "*"
rand = {git="https://github.com/rust-lang-nursery/rand.git"}

conrod = "*"
image = "0.18"
find_folder = "*"

[features]
default = ["winit", "glium"]
winit = ["conrod/winit"]
glium = ["conrod/glium"]
